<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_Server" Id="{2500dddb-94b6-4e5c-9bd7-213ac66064e8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Server
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	fbConnect 					:FB_ServerClientConnection;
	fbSocketReceive				:FB_SocketReceive;
	fbSocketSend				:FB_SocketSend;
	hServer						:T_HSERVER;
	hSocket						:T_HSOCKET;
	buffer						:ARRAY[0..1000] OF BYTE;
	cbReceived					:UDINT;
	fbTimeoutReceive			:TON;						//Disconnect if no data was sent for an interval
	
	//HMI
	sRemoteAddress				:STRING;
	sLastConTime				:STRING(8);	
	bClientConnected			:BOOL;	
	bInit						:BOOL;					
	
	//Properties
	_SrvNetID					:STRING;
	_Host						:T_IPv4Addr;				
	_Port						:UDINT;						
	_Timeout					:TIME;
	_Timestamp					:STRING(8);
	_SystemTime					:DATE_AND_TIME;	
	_SocketState				:E_SocketConnectionState;
	_ReceivedData				:ARRAY[0..1000] OF BYTE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_SocketState := fbConnect.eState;
fbTimeoutReceive(IN:= fbTimeoutReceive.IN, PT:= _Timeout);

// HMI
bClientConnected := IsSocketAlive();
IF bInit THEN
	Init(sSrvNetID, sLocalHost, nLocalPort, nTimeoutInSeconds);
	bInit := FALSE;
END_IF
]]></ST>
    </Implementation>
    <Folder Name="Properties" Id="{df0bad61-b7b0-48f4-b35d-25988c9c1b71}" />
    <Method Name="AcceptConnection" Id="{7b92cfdb-52a6-44ec-9434-44f1cdd4c452}">
      <Declaration><![CDATA[METHOD AcceptConnection : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[AcceptConnection := FALSE;
fbConnect(
	hServer:= hServer, 
	eMode:= eACCEPT_ALL, 
	bEnable:= TRUE, 
	tReconnect:= T#1S, 
	hSocket=> hSocket);
	
IF NOT fbConnect.bBusy AND NOT fbConnect.bError AND fbConnect.eState = eSOCKET_CONNECTED THEN
	sRemoteAddress := SOCKETADDR_TO_STRING(hSocket.remoteAddr);
	sLastConTime := _Timestamp;
	AcceptConnection := TRUE;
ELSIF fbConnect.bError THEN
	AcceptConnection := TRUE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="CloseConnection" Id="{2e13b25b-368f-491e-a110-cce522d78e92}">
      <Declaration><![CDATA[METHOD CloseConnection : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbConnect(
	hServer:= hServer, 
	bEnable:= FALSE);
CloseConnection := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Host" Id="{ee7c1a25-0d51-4ac6-86a2-cb2376106f3f}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Host : T_IPv4Addr]]></Declaration>
      <Get Name="Get" Id="{eabd5325-eedb-46b9-b8ae-530a83400012}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Host := _Host;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Init" Id="{1ab0d3a5-66be-4f55-9708-6a1cb7e85ad5}">
      <Declaration><![CDATA[METHOD Init : BOOL
VAR_INPUT
	sSrvNetID					:T_AmsNetID	:= '';	
	sLocalHost					:T_IPv4Addr	:= '127.0.0.0';		(* Own (server) IP address! *)
	nLocalPort					:UDINT 		:= 15000;			(* Own (server) port number! *)
	nTimeoutInSeconds			:UINT 		:= 5;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Init := F_CreateServerHnd(
		sSrvNetID 	:= sSrvNetID,
		sLocalHost 	:= sLocalHost,
		nLocalPort	:= nLocalPort,
		nMode 		:= LISTEN_MODE_CLOSEALL,
		bEnable 	:= FALSE,
		hServer 	:= hServer );
_Host := sLocalHost;
_Port := nLocalPort;
_SrvNetID := sSrvNetID;
_Timeout := UINT_TO_TIME(nTimeoutInSeconds * 1000);]]></ST>
      </Implementation>
    </Method>
    <Method Name="IsSocketAlive" Id="{18ede376-22c5-414e-a4c9-69b158abc640}">
      <Declaration><![CDATA[METHOD IsSocketAlive : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IsSocketAlive := _SocketState = E_SocketConnectionState.eSOCKET_CONNECTED;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Port" Id="{8c881784-4105-440c-a09f-067f1b218170}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Port : UDINT]]></Declaration>
      <Get Name="Get" Id="{0df9a5b8-7a6d-407e-a809-1450934a5405}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Port := _Port;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Receive" Id="{2e302f86-3757-47c4-985c-92cecb7c7212}">
      <Declaration><![CDATA[METHOD Receive : BOOL
VAR_INPUT
	pData			:POINTER TO BYTE;	// Pointer to data
	nDataSize		:UDINT;				// Size of the data
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Receive := FALSE;
IF _SocketState = E_SocketConnectionState.eSOCKET_CONNECTED THEN
	fbSocketReceive(
	sSrvNetId:= _SrvNetID, 
	hSocket:= hSocket, 
	cbLen:= SIZEOF(buffer), 
	pDest:= ADR(buffer), 
	bExecute:= TRUE, 
	tTimeout:= _Timeout);
	
	IF NOT fbSocketReceive.bBusy THEN
		fbSocketReceive(bExecute := FALSE);
		IF fbSocketReceive.nRecBytes <> 0 THEN
			cbReceived := fbSocketReceive.nRecBytes;
			MEMSET(ADR(_ReceivedData), 0, SIZEOF(_ReceivedData));
			MEMCPY(ADR(_ReceivedData), ADR(buffer), cbReceived);
			MEMSET(pData, 0, nDataSize);
			MEMCPY(pData, ADR(buffer), cbReceived);
			MEMSET(ADR(buffer),0,cbReceived);
			fbTimeoutReceive.IN := FALSE;
			Receive := TRUE;
		ELSE
			fbTimeoutReceive.IN := TRUE;
		END_IF
	END_IF
	IF fbSocketReceive.bError THEN
		CloseConnection();
		Receive := TRUE;
	END_IF
END_IF

IF fbTimeoutReceive.Q THEN
	fbTimeoutReceive.IN := FALSE;
	fbSocketReceive(bExecute := FALSE);
	CloseConnection();
	Receive := TRUE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Send" Id="{19fa47be-fe66-4a36-83de-3e6805a4385d}">
      <Declaration><![CDATA[METHOD Send : BOOL
VAR_INPUT
	pData			:POINTER TO BYTE;	// Pointer to data
	nDataSize		:UDINT;				// Size of the data
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Send := FALSE;
IF _SocketState = E_SocketConnectionState.eSOCKET_CONNECTED THEN
	fbSocketSend(
			sSrvNetId:= _SrvNetID, 
			hSocket:= hSocket, 
			cbLen:= nDataSize, 
			pSrc:= pData, 
			bExecute:= TRUE, 
			tTimeout:= _Timeout);
			
	IF NOT fbSocketSend.bBusy THEN
		fbSocketSend(bExecute := FALSE);
		Send := TRUE;
	END_IF
	IF fbSocketSend.bError THEN
		CloseConnection();
		Send := TRUE;
	END_IF
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Property Name="SocketState" Id="{b5322fe7-c8ac-4184-9e4c-2363ab9a8f5b}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY SocketState : E_SocketConnectionState]]></Declaration>
      <Get Name="Get" Id="{64bb4902-685f-4253-a59e-3b02e201e486}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[SocketState := _SocketState;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="SystemTime" Id="{279b5386-a064-4fed-b3c7-9a29b786e461}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY SystemTime : DATE_AND_TIME]]></Declaration>
      <Set Name="Set" Id="{af13342b-b386-48a7-9177-18c27686975a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_SystemTime := SystemTime;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="Timeout" Id="{87deff31-dc26-454c-80c6-0054ecf5f118}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Timeout : TIME]]></Declaration>
      <Get Name="Get" Id="{87fea6af-b839-464d-a359-ee4ae77b0e85}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Timeout := _Timeout;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Timestamp" Id="{4542e124-d679-4145-ab74-d8ab589bccbb}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY Timestamp : STRING]]></Declaration>
      <Set Name="Set" Id="{75b8ab2b-f511-40c5-bcab-2e8a066238b6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[_Timestamp := Timestamp;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_Server">
      <LineId Id="246" Count="7" />
      <LineId Id="242" Count="0" />
      <LineId Id="285" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.AcceptConnection">
      <LineId Id="16" Count="0" />
      <LineId Id="6" Count="5" />
      <LineId Id="17" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.CloseConnection">
      <LineId Id="7" Count="1" />
      <LineId Id="6" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Host.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Init">
      <LineId Id="9" Count="5" />
      <LineId Id="5" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="25" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.IsSocketAlive">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Port.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Receive">
      <LineId Id="97" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="118" Count="6" />
      <LineId Id="139" Count="0" />
      <LineId Id="125" Count="3" />
      <LineId Id="138" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="137" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="116" Count="1" />
      <LineId Id="144" Count="1" />
      <LineId Id="147" Count="2" />
      <LineId Id="146" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Send">
      <LineId Id="74" Count="18" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.SocketState.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.SystemTime.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Timeout.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Server.Timestamp.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>